[gd_scene load_steps=3 format=3 uid="uid://c1d5jcrvvif0v"]

[ext_resource type="Script" path="res://parts/day2.gd" id="1_bxxul"]
[ext_resource type="Theme" uid="uid://c4g72gck2md7j" path="res://parts/day_themes.tres" id="2_sqs4k"]

[node name="Day2" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 720.0
script = ExtResource("1_bxxul")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.674815, 0.674815, 0.674814, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 306.0
offset_top = 479.0
offset_right = 720.0
offset_bottom = 564.0
text = "Click me
Ends game."

[node name="Reset" type="Button" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 121.0
offset_right = 1072.0
offset_bottom = 228.0
text = "Reset"

[node name="Counter" type="Label" parent="."]
layout_mode = 0
offset_left = 816.0
offset_top = 2.0
offset_right = 1080.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 29
text = "Game is: 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Which game number" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 203.0
offset_right = 228.0
offset_bottom = 370.0

[node name="TextArea" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -464.0
offset_top = -144.0
offset_right = 465.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0

[node name="GameEnter" type="RichTextLabel" parent="TextArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -814.0
offset_top = -51.0
offset_right = -15.0
offset_bottom = 51.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_sqs4k")
text = "Pretend text exists here."

[node name="TextureRect" type="TextureRect" parent="TextArea"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -50.5
offset_right = 107.0
offset_bottom = 50.5
grow_vertical = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
